bizinikiwi/pezframe/support/test/tests/pezpallet_ui/trait_item_duplicate_constant_attr.stderr
error: Duplicate #[pezpallet::constant] attribute not allowed.
  --> tests/pezpallet_ui/trait_item_duplicate_constant_attr.rs:26:4
   |
26 |         #[pezpallet::constant]
   |          ^^^^^^^^^^^^^^^^^^^^^
